<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/dimen5"
        android:paddingBottom="@dimen/dimen5">
        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="@dimen/textsize15"
            android:textColor="@color/font_color"
            android:layout_centerVertical="true"
            android:background="@null"
            android:padding="@dimen/dimen10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textSize="@dimen/textsize20"
            android:textColor="@color/font_color"
            android:layout_centerInParent="true"
            android:background="@null"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1"
        android:background="@color/gray_light"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen20">
        <ImageView
            android:id="@+id/iv_play_index"
            android:layout_width="@dimen/dimen100"
            android:layout_height="@dimen/dimen100"
            android:scaleType="fitCenter"
            android:contentDescription="@null"/>
        <TextView
            android:id="@+id/tv_play_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize16"
            android:textColor="@color/font_color"
            android:layout_toEndOf="@id/iv_play_index"
            android:layout_marginStart="@dimen/dimen10"
            android:background="@null"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1"
        android:background="@color/gray_light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen20">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist"
            android:textSize="@dimen/textsize18"
            android:textColor="@color/font_color"
            android:background="@null"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1"
        android:background="@color/gray_light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/dimen20"
        android:paddingEnd="@dimen/dimen20">
        <ListView
            android:id="@+id/lv_play_index"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:divider="@color/gray_light"
            android:dividerHeight="@dimen/dimen1"
            android:background="@null"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ad_unit_id" />
    </RelativeLayout>
</LinearLayout>
